--- a/Nullness.Bang/Nullness.Bang.csproj
+++ b/Nullness.Bang/Nullness.Bang.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	  <OutputItemType>Analyzer</OutputItemType>
+	  <PackageId>Nullness.Bang</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>JoostvV</Authors>
+	  <Description>Add nullforging operator to CS8602 </Description>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
   </PropertyGroup>
 
   <ItemGroup>
