--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,5 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
-    - name: Publish to NuGet
-      uses: brandedoutcast/publish-nuget@v2.5.2
-      with:
-        PROJECT_FILE_PATH: 'src/Nulless.bang/Nulless.bang.csproj'
-        NUGET_KEY: ${{ secrets.NUGET_API_KEY }}
-        VERSION_REGEX: '<Version>(.*)<\/Version>'
+    - name: Publish Nuget Packages
+      run: dotnet nuget push *.nupkg -k ${{ secrets.NUGET_API_KEY }}
